@@ -66,6 +66,8 @@ Fixes
     would create a test artifact (Issue #2979, PR #2981)
 
 Enhancements
+  * The PDB writer gives more control over how to write the atom ids
+    (Issue #1072, PR #2886)
   * Preliminary support for the Linux ARM64 platform with minimal
     dependencies (PR #2956)
   * Refactored analysis.helanal into analysis.helix_analysis
